Fix deprecated GTK API usage

https://bugzilla.gnome.org/show_bug.cgi?id=670184